# family-monolith

./: .agent.md  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  champs-planning-prompt.md  champs-tracker-spec.md  champs-tracker-tickets-to-add.md  frontend-scaffolding-project-spec.md  idea-honing-prompt.md  package-lock.json  package.json  server-low-level-blueprint.md  server-planning-high-level-blueprint.md  server-project-spec.md  server-todo.md  ticket-001-project-foundation.md  ticket-002-bathroom-activities-backend.md  ticket-003-bathroom-activities-frontend.md  ticket-004-eating-activities-backend.md  ticket-005-eating-activities-frontend.md  ticket-006-outdoor-activities-backend.md  ticket-007-outdoor-activities-frontend.md  ticket-008-vet-visits-backend.md  ticket-009-vet-visits-frontend.md  ticket-010-medication-backend.md  ticket-011-medication-frontend.md  ticket-012-play-activities-backend.md  ticket-013-play-activities-frontend.md  ticket-014-daily-highlights-backend.md  ticket-015-daily-highlights-frontend.md  ticket-016-photo-upload-planning.md  ticket-017-home-screen-integration.md  tmp_rovodev_pr_body.md  todo-app-implementation-sequencing-plan.md  todo-app-spec.md  todoist-features.md  tsconfig.base.json
server/: .gitignore  ARCHITECTURE.MD  AUTH.md  Cargo.toml  DATABASE.md  DEPLOY.md  Dockerfile  README.md  STATIC_APPS.md  STATIC_DOWNLOADS.md
server/.cargo/: config.toml
server/deploy/: monolith-docker.service  monolith.service  monolith_copy.sh
server/manual_tests/: jwt_refresh_test.sh
server/src/: config.rs  error.rs  lib.rs  (+1 more)
(+426 files in other folders)
