[package]
name = "monolith-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["."]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
async-graphql = "7.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "limit", "trace", "fs"] }
time = "0.3"
once_cell = "1.19"
anyhow = "1.0"
base64 = "0.21"
dashmap = "5.5"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
rrule = "0.13"

[dev-dependencies]
sqlx-cli = { version = "0.7", default-features = false, features = ["sqlite", "rustls"] }
